--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
 }
 
 .jumbotron {
