--- a/style.css
+++ b/style.css
@@ -69,3 +69,10 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+.saveBtn button {
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    height: 100%;
+}
