--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ textarea{
   color: #000000;
   padding: 10px;
   width: 100%;
+  height: 100%;
 }
 
 .jumbotron {
@@ -40,6 +41,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding: 30px;
 }
 
 .past {
@@ -63,6 +65,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  padding: 30px;
 }
 
 .saveBtn i:hover {
@@ -70,9 +73,3 @@ textarea{
   transition: all .3s ease-in-out;
 }
 
-.saveBtn button {
-    background-color: transparent;
-    border: none;
-    width: 100%;
-    height: 100%;
-}
